<resources>
    <string name="app_name">LogueoFirebase</string>
    <string name="msg_restablecerclave">Clave reestablecida</string>
    <string name="msg_borraruser">Usuario eliminado</string>
    <string name="editClave">Contraseña</string>
    <string name="editUser">Correo</string>
    <string name="logIn">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="titulo">Titulo</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
    <string name="save">Guardar</string>
    <string name="close">Cerrar</string>
    <string name="reset">¿Olvido su contraseña?</string>
    <string name="delete">Eliminar</string>
    <string name="avisoRegistro">Ha de introducir su correo</string>
    <string name="avisoLogin">Ha de introducir tanto correo como contraseña</string>
    <string name="avisoInicioEx">No existe ese usuario</string>
    <string name="avisoInicioPass">Contraseña incorrecta</string>
    <string name="avisoCreacion">Ha surgido un error mientras se creaba</string>
</resources>